# Rust-language---Laboratories

./: README.md
LAB_01/problem_1/src/: main.rs
LAB_01/problem_3/src/: main.rs
LAB_02/problem_1/src/: main.rs
LAB_02/problem_2/src/: main.rs
LAB_02/problem_3/src/: main.rs
LAB_03/problem_1/src/: main.rs
LAB_03/problem_2/src/: main.rs
LAB_03/problem_3/src/: main.rs
LAB_03/problem_4/: Cargo.toml
LAB_03/problem_4/src/: main.rs
LAB_04/opt_contest_1/: copy.rs  output.txt
LAB_04/opt_contest_1/src/: main.rs
LAB_04/problem_1/src/: main.rs
LAB_04/problem_2/: input.txt  output.txt
LAB_04/problem_2/src/: main.rs
LAB_04/problem_3/src/: main.rs
LAB_04/problem_4/src/: main.rs
LAB_05/problem_1/: Cargo.toml
LAB_05/problem_1/src/: main.rs
LAB_05/problem_2/: Cargo.toml
LAB_05/problem_2/src/: main.rs
LAB_05/problem_3/: Cargo.toml
LAB_05/problem_3/src/: main.rs
LAB_06/problem_1/: Cargo.toml
LAB_06/problem_1/src/: input.txt  main.rs
LAB_07/problem_1/src/: main.rs
LAB_08/problem_1/: Cargo.toml
LAB_08/problem_1/src/: main.rs
LAB_09/base64/src/: lib.rs
LAB_09/encoder/: Cargo.toml
LAB_09/encoder/src/: main.rs
LAB_11/problem_1/src/: main.rs
Projects/appending/: Cargo.toml  test.txt
Projects/appending/src/: main.rs
Projects/calculator/: Cargo.toml
Projects/calculator/src/: main.rs
Projects/hang_man_game/: Cargo.toml  words.txt
Projects/pass_gen/: Cargo.toml
Projects/splitter/: Cargo.toml  a.txt
Projects/splitter/src/: a.txt  main.rs
Projects/todo/: exist  rust  sad  sss  sssssssssssss  to  todo_test
(+7 files in other folders)
