[package]
name = "splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#source: https://docs.rs/crate/rand/0.8.5
rand="*"
#source: https://docs.rs/fastrand/latest/fastrand/
fastrand="*"
regex="*"